# tf-harness-acore

./: .checkov.yaml  .github-setup.md  .gitignore  .gitlab-ci.yml  .mcp.json  .pre-commit-config.yaml  .terraform-version  .tflint.hcl  AGENTS.md  CHANGELOG.md  CLAUDE.md  DELIVERY_SUMMARY.txt  DEVELOPER_GUIDE.md  GEMINI.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  Makefile  QUICK_REFERENCE.md  README.md  README_IMPROVEMENT_PLAN.md  ROADMAP.md  SECURITY_AUDIT_2026-02-08.md  SETUP.md  cat.bat  main.tf  outputs.tf  terraform.tfvars.example  validate_windows.bat  variables.tf  versions.tf
.claude/: settings.local.json
.context/: e8a-agentcore-multitenancy-routing-synthesis-2026-02-22.md  e8a-agentcore-regional-availability-matrix-2026-02-22.md
.context/terraform-aws-provider/: README.md  changelog-synthesis.md  resource-synthesis-v6.33.0.md  sources.md
.github/ISSUE_TEMPLATE/: config.yml  execution_issue.md  tracker_issue.md
.github/workflows/: accessibility.yml  ci.yml  frontend-playwright-smoke.yml
docs/: MULTITENANCY_MODEL.md  NOVATION_MATRIX.md  POLICY_CONFORMANCE_REPORT.md  SDK_VERSION_DRIFT_REPORT.md  STATE_LOCKING_UPDATE.md  WIF_SETUP.md  architecture.md  terraform.md
docs/adr/: 0001-module-structure.md  0002-cli-based-resources.md  0003-gitlab-ci-pipeline.md  0004-state-management.md  0005-secrets-strategy.md  0006-separate-backends-not-workspaces.md  0007-single-region-decision.md  0008-aws-managed-encryption.md  0009-strands-agent-publishing.md  0010-service-discovery.md  0011-serverless-spa-bff.md  0012-agent-identity-alias.md  0013-segmented-state-key-strategy.md  0014-metadata-tagging-telemetry-and-release-metadata-boundaries.md  0015-bff-identity-persistence-interceptors-and-multitenancy-viability.md  0016-terraform-scaling-stack-topology-and-terragrunt-adoption-thresholds.md  pre-0009-b2e-architecture-discovery.md  pre-0010-service-discovery.md  pre-0011-serverless-spa-bff.md
docs/api/: mcp-tools-v1.client.ts  mcp-tools-v1.openapi.json  tenancy-admin-v1.openapi.json
docs/archive/: IMPLEMENTATION_SUMMARY.md  README.md  README.old.md
docs/audits/: SECURITY_AUDIT_2026-02-08.md
docs/diagrams/: architecture-overview.drawio  developer-loop.drawio  module-topology.drawio  request-flow.drawio
docs/plans/: REMEDIATION_PLAN_V1.md
docs/runbooks/: common-failures.md  developer-harness.md  devops-loop.md  eu-split-deployment.md  native-migration-state-transition.md  repo-restructure.md  rollback-procedure.md  segmented-state-migration.md  segmented-terraform-state-key-migration.md  state-recovery.md  tenant-platform-architecture-build-plan.md  terraform-scaling-stack-segmentation-and-terragrunt-pilot.md
examples/: research-agent.tfvars
examples/1-hello-world/: README.md  terraform.tfvars
examples/1-hello-world/agent-code/: pyproject.toml  runtime.py
examples/1-hello-world/agent-code/tests/: __init__.py  conftest.py  test_handler.py
examples/2-gateway-tool/: README.md  terraform.tfvars
examples/2-gateway-tool/agent-code/: pyproject.toml  runtime.py
examples/2-gateway-tool/agent-code/tests/: __init__.py  conftest.py  test_analysis.py
examples/3-deepresearch/: README.md  terraform.tfvars
examples/3-deepresearch/agent-code/: README.md  __init__.py  config.py  main.py  pyproject.toml  runtime.py
examples/3-deepresearch/agent-code/deepresearch/: main.py
examples/3-deepresearch/agent-code/deepresearch/prompts/: __init__.py
examples/3-deepresearch/agent-code/deepresearch/prompts/reference/: research_subagent.md
examples/3-deepresearch/agent-code/deepresearch/tools/: __init__.py  internet_search.py
examples/3-deepresearch/agent-code/deepresearch/utils/: secrets.py  telemetry.py
examples/3-deepresearch/agent-code/prompts/: citations_agent.py  research_lead.py  research_subagent.py
examples/3-deepresearch/agent-code/prompts/reference/: citations_agent.md  research_lead_agent.md
examples/3-deepresearch/agent-code/tests/: conftest.py  run_tests.sh
examples/3-deepresearch/agent-code/tests/integration/: test_agent_creation.py  test_s3_integration.py
examples/3-deepresearch/agent-code/tests/unit/: test_agentcore_sdk_smoke.py  test_config.py  test_s3_outputs.py  test_session.py  test_telemetry.py
examples/3-deepresearch/agent-code/utils/: s3_outputs.py  session.py  telemetry.py
examples/4-research/: README.md  terraform.tfvars
examples/4-research/agent-code/: pyproject.toml  runtime.py
examples/4-research/agent-code/tests/: __init__.py  conftest.py  test_research_agent.py
examples/5-integrated/: README.md  main.tf
examples/5-integrated/agent-code/: pyproject.toml  runtime.py
examples/6-langgraph-baseline/: README.md  terraform.tfvars
examples/6-langgraph-baseline/agent-code/: pyproject.toml  runtime.py
examples/6-langgraph-baseline/agent-code/tests/: __init__.py  conftest.py  test_langgraph_runtime.py
examples/mcp-servers/: Makefile  README.md
examples/mcp-servers/local-dev/: pyproject.toml  requirements.txt  server.py
examples/mcp-servers/s3-tools/: handler.py  pyproject.toml  requirements-dev.txt  requirements.txt
examples/mcp-servers/titanic-data/: handler.py  pyproject.toml  requirements.txt
modules/agentcore-foundation/: gateway.tf  iam.tf  identity.tf  observability.tf  outputs.tf  variables.tf
modules/agentcore-governance/: evaluations.tf  iam.tf  outputs.tf  policy.tf  variables.tf
modules/agentcore-runtime/: iam.tf  outputs.tf  packaging.tf  runtime.tf  s3.tf  variables.tf
modules/agentcore-tools/: browser.tf  code_interpreter.tf  iam.tf  outputs.tf  variables.tf
scripts/: validate_cedar_policies.sh  validate_examples.sh
templates/agent-project/: .gitignore.jinja  README.md.jinja  copier.yml
terraform/: .checkov.yaml  .tflint.hcl  backend-dev.tf.example  backend-dev.tfvars.example  backend-prod.tf.example  backend-prod.tfvars.example  backend-test.tf.example  backend-test.tfvars.example  backend.tf  locals.tf  main.tf  outputs.tf  region_guardrails.tf  terraform.tfvars.example  variables.tf  variables_bff.tf  versions.tf
terraform/scripts/: acore_debug.py  bootstrap_wif.sh  (+15 more)
(+148 files in other folders)
