[project]
name = "hello-world-agent"
version = "1.0.0"
description = "Minimal S3 Explorer Agent for Bedrock AgentCore"
requires-python = ">=3.12"

dependencies = [
    "bedrock-agentcore>=1.0.7",
    "boto3>=1.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "moto[s3]>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "moto[s3]>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
