[project]
name = "gateway-tool-agent"
version = "1.0.0"
description = "Titanic Data Analysis Agent using MCP Gateway"
requires-python = ">=3.12"

dependencies = [
    "bedrock-agentcore>=1.0.7",
    "boto3>=1.34.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "moto[s3]>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
