[project]
name = "local-dev-mcp"
version = "1.0.0"
description = "Local Development MCP Server for Bedrock AgentCore"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "requests>=2.31.0",
]

[project.scripts]
local-mcp = "server:app.run"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
