[project]
name = "s3-tools-mcp"
version = "0.1.0"
description = "S3 Tools MCP Server for Bedrock AgentCore"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "moto>=5.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
