[project]
name = "titanic-data-mcp"
version = "0.1.0"
description = "Titanic Dataset MCP Server for Bedrock AgentCore"
requires-python = ">=3.12"
dependencies = []  # No external dependencies - uses stdlib only

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
